--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,10 +5,10 @@ services:
       context: .
       dockerfile: ./Dockerfile
     ports:
-       - "8080:8083"
+       - "8083:8080"
     depends_on:
        - postgres
-    restart: on-failure
+    restart: always
   postgres:
     image: postgres:15
     env_file:
@@ -22,11 +22,17 @@ services:
       - ./migrations/init.sql:/docker-entrypoint-initdb.d/initdb.sql
     ports:
       - "5433:5432"
-  redis:
+  cache:
       image: redis:6.2-alpine
       restart: always
+      env_file:
+        - .env
+      environment:
+        - REDIS_MAXMEMORY=512mb
+        - REDIS_MAXMEMORY_POLICY=allkeys-lru
+        - REDIS_PASSWORD=${REDIS_PASSWORD}
       ports:
         - '6379:6379'
-      command: redis-server --save 20 1 --loglevel warning --requirepass password
+      command: redis-server --save 20 1 --loglevel warning
       volumes:
-        - redis-data:/data
+        - ./cache:/data
